--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "b863a8f0eca3907b",
+        "id": "0a6cb8544164adcd",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "ML/PCA.md",
+            "file": "Maths/p-value, type1 and type2 errors.md",
             "mode": "preview"
           }
         }
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "covariance",
+                "query": "pca",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -60,7 +60,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 376.0121879577637
+    "width": 357
   },
   "right": {
     "id": "b78f15cdafdd7f3a",
@@ -76,7 +76,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "ML/PCA.md",
+                "file": "Maths/p-value, type1 and type2 errors.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -104,7 +104,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "ML/PCA.md"
+                "file": "Maths/p-value, type1 and type2 errors.md"
               }
             }
           }
@@ -115,17 +115,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "b863a8f0eca3907b",
+  "active": "0a6cb8544164adcd",
   "lastOpenFiles": [
+    "Maths/p-value, type1 and type2 errors.md",
+    "MOOCs/ML with Graphs/Embedding Entire Graphs.md",
+    "Papers and Articles/List.md",
+    "Papers and Articles/Grammar Correction on Devices.md",
+    "Papers and Articles/Getting labels using ___ learning.md",
+    "Papers and Articles/Graph Neural Networks for Natural Language Processing A Survey.md",
+    "ML/Anomaly Detection.md",
     "ML/PCA.md",
-    "ML/KL Divergence.md",
-    "ML/Recommender Systems.md",
-    "ML/Time Series.md",
-    "Maths/SVD.md",
-    "Maths/Eigen Decomposition.md",
-    "Maths/Covariance matrix.md",
-    "Misc/ajays meeting.md",
-    "ML/Augmented Dickey-Fuller Test.md",
-    "ML/LDA.md"
+    "Maths/Convexity.md",
+    "Maths/SVD.md"
   ]
 }
