--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,7 +5,7 @@
   "foldIndent": false,
   "showLineNumber": true,
   "alwaysUpdateLinks": true,
-  "fileSortOrder": "byModifiedTime",
+  "fileSortOrder": "byCreatedTime",
   "promptDelete": false,
   "newFileLocation": "current",
   "attachmentFolderPath": "Assets",
