--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,9 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "NLP/Pointwise Mutual Information (PMI).md",
-            "mode": "source"
+            "file": "System Design/Load Balancing.md",
+            "mode": "source",
+            "source": false
           }
         }
       }
@@ -39,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "imbalanced",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -76,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "NLP/Pointwise Mutual Information (PMI).md",
+                "file": "System Design/Load Balancing.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -104,7 +105,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "NLP/Pointwise Mutual Information (PMI).md"
+                "file": "System Design/Load Balancing.md"
               }
             }
           },
@@ -114,7 +115,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "NLP/Pointwise Mutual Information (PMI).md",
+                "file": "System Design/Load Balancing.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -129,15 +130,15 @@
   },
   "active": "e328eec949fe7595",
   "lastOpenFiles": [
-    "NLP/Pointwise Mutual Information (PMI).md",
-    "NLP/Transformers.md",
-    "MOOCs/2-4 Machine Learning Data Lifecycle in Production/Week 1.md",
-    "MOOCs/2-4 Machine Learning Data Lifecycle in Production/Week 2.md",
+    "System Design/Load Balancing.md",
+    "Untitled.md",
     "Tasks.md",
-    "MOOCs/2-4 Machine Learning Data Lifecycle in Production/Week 3.md",
-    "Misc/Interview Preparation Checklist.md",
-    "Templates/Emojis.md",
-    "Templates/Leetcode.md",
-    "Assets/Pasted image 20211122135158.png"
+    "Leetcode/Questions/15. 3Sum.md",
+    "Leetcode/Questions/16. 3Sum Closest.md",
+    "Leetcode/Questions/442. Find All Duplicates in an Array.md",
+    "Leetcode/Questions/448. Find All Numbers Disappeared in an Array.md",
+    "Leetcode/Questions/79. Word Search.md",
+    "Leetcode/Questions/22. Generate Parentheses.md",
+    "Leetcode/Questions/429. N-ary Tree Level Order Traversal.md"
   ]
 }
