--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -16,5 +16,7 @@
     "margin": "0",
     "downscalePercent": 100
   },
-  "useMarkdownLinks": false
+  "useMarkdownLinks": false,
+  "legacyEditor": false,
+  "livePreview": true
 }
